--- a/index.html
+++ b/index.html
@@ -12,5 +12,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react.js" charset="utf-8"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/15.4.1/react-dom.js" charset="utf-8"></script>
     <script src="index.js" type="text/babel" charset="utf-8"></script>
+    <script>
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-89457119-1', 'auto');
+      ga('send', 'pageview');
+
+    </script>
   </body>
 </html>
